[gd_scene load_steps=26 format=2]

[ext_resource path="res://src/nodes/Player_spaceship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/nodes/Score.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/nodes/Player_area.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/terminal/theme/theme.tres" type="Theme" id=4]
[ext_resource path="res://src/scripts/enemy/Spawn.gd" type="Script" id=5]
[ext_resource path="res://src/scripts/HealthBar.gd" type="Script" id=6]
[ext_resource path="res://src/assets/sprites/Hp Bar/full.png" type="Texture" id=7]
[ext_resource path="res://src/assets/sprites/Hp Bar/empty.png" type="Texture" id=8]
[ext_resource path="res://src/scripts/MenuPopup.gd" type="Script" id=9]
[ext_resource path="res://src/assets/sfx/Ghostrifter-Official-Celestia.mp3" type="AudioStream" id=10]
[ext_resource path="res://src/scripts/AudioPlayer.gd" type="Script" id=11]
[ext_resource path="res://src/assets/sprites/space_background.png" type="Texture" id=12]
[ext_resource path="res://src/assets/sprites/pause_button.png" type="Texture" id=13]
[ext_resource path="res://src/nodes/Joystick.tscn" type="PackedScene" id=14]
[ext_resource path="res://MainMenuButtons.tres" type="Theme" id=15]
[ext_resource path="res://src/scripts/GameOverPopup.gd" type="Script" id=16]
[ext_resource path="res://src/scripts/FinalScore.gd" type="Script" id=17]
[ext_resource path="res://src/scripts/FinalCoins.gd" type="Script" id=18]
[ext_resource path="res://src/scripts/XPBar.gd" type="Script" id=19]
[ext_resource path="res://src/assets/sprites/xpbar/xpbarempty.png" type="Texture" id=20]
[ext_resource path="res://src/assets/sprites/xpbar/xpbarfull.png" type="Texture" id=21]
[ext_resource path="res://src/scripts/HP.gd" type="Script" id=22]
[ext_resource path="res://src/scripts/Attack_speed.gd" type="Script" id=23]
[ext_resource path="res://src/scripts/Damage.gd" type="Script" id=24]
[ext_resource path="res://src/scripts/CurrHP.gd" type="Script" id=25]

[node name="MainScene" type="Node2D"]
script = ExtResource( 5 )

[node name="Player_spaceship" parent="." instance=ExtResource( 1 )]
position = Vector2( 540, 1700 )
scale = Vector2( 4, 4 )

[node name="Player_area" parent="." instance=ExtResource( 3 )]
position = Vector2( 4, 1350 )
scale = Vector2( 1.055, 3 )

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="Score" parent="GUI" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 763.0
margin_top = 115.0
margin_right = -191.0
margin_bottom = -2310.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
text = "0"
align = 2
valign = 1

[node name="HP Bar" type="TextureProgress" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 75.0
margin_right = -836.0
margin_bottom = -2268.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 4 )
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 7 )
script = ExtResource( 6 )

[node name="Joystick" parent="GUI" instance=ExtResource( 14 )]
position = Vector2( 540, 2150 )

[node name="PauseButton" type="TouchScreenButton" parent="GUI"]
position = Vector2( 980, 165 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 13 )
visibility_mode = 1

[node name="XP Bar" type="TextureProgress" parent="GUI"]
margin_top = 50.0
margin_right = 1080.0
margin_bottom = 110.0
value = 50.0
texture_under = ExtResource( 20 )
texture_progress = ExtResource( 21 )
script = ExtResource( 19 )

[node name="Damage" type="Label" parent="GUI"]
margin_top = 500.0
margin_right = 100.0
margin_bottom = 540.0
theme = ExtResource( 15 )
text = "3
"
script = ExtResource( 24 )

[node name="Attack_speed" type="Label" parent="GUI"]
margin_top = 600.0
margin_right = 109.0
margin_bottom = 640.0
theme = ExtResource( 15 )
text = "0.4"
script = ExtResource( 23 )

[node name="HP" type="Label" parent="GUI"]
margin_top = 700.0
margin_right = 100.0
margin_bottom = 740.0
theme = ExtResource( 15 )
text = "3"
script = ExtResource( 22 )

[node name="CurrHP" type="Label" parent="GUI"]
margin_top = 800.0
margin_right = 100.0
margin_bottom = 840.0
rect_min_size = Vector2( 2, 0 )
theme = ExtResource( 15 )
text = "5"
script = ExtResource( 25 )

[node name="LevelUpMenu" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="LevelUpMenu"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true

[node name="ColorRect" type="ColorRect" parent="LevelUpMenu/Popup"]
anchor_right = 26.962
anchor_bottom = 59.957
margin_left = 20.0
margin_top = 750.0
margin_right = -28059.0
margin_bottom = -142347.0
color = Color( 0.470588, 0.470588, 0.470588, 0.607843 )

[node name="Label" type="Label" parent="LevelUpMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 277.0
margin_top = 800.0
margin_right = -103.0
margin_bottom = -1471.0
rect_scale = Vector2( 0.75, 0.75 )
theme = ExtResource( 15 )
text = "You Leveled Up


Pick Your Upgrade"
align = 1
valign = 1

[node name="Upgrade" type="Button" parent="LevelUpMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 1100.0
margin_right = -780.0
margin_bottom = -1050.0
theme = ExtResource( 15 )

[node name="Label" type="Label" parent="LevelUpMenu/Popup/Upgrade"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 62.5
margin_bottom = 62.5
rect_scale = Vector2( 0.8, 0.8 )
text = "Damage
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Upgrade2" type="Button" parent="LevelUpMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 1100.0
margin_right = -430.0
margin_bottom = -1050.0
theme = ExtResource( 15 )

[node name="Label" type="Label" parent="LevelUpMenu/Popup/Upgrade2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 62.5
margin_bottom = 62.5
rect_scale = Vector2( 0.8, 0.8 )
text = "Attack

Speed
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Upgrade3" type="Button" parent="LevelUpMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 750.0
margin_top = 1100.0
margin_right = -80.0
margin_bottom = -1050.0
theme = ExtResource( 15 )

[node name="Label" type="Label" parent="LevelUpMenu/Popup/Upgrade3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 62.5
margin_bottom = 62.5
rect_scale = Vector2( 0.8, 0.8 )
text = "Max HP
"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="GameOver"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -7.0
margin_bottom = -4.0
popup_exclusive = true
script = ExtResource( 16 )

[node name="ColorRect" type="ColorRect" parent="GameOver/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -0.511108
margin_bottom = 4.0
color = Color( 0, 0, 0, 0.745098 )

[node name="GameOverButton" type="Button" parent="GameOver/Popup"]
anchor_right = 1.007
anchor_bottom = 1.0
margin_right = -0.510986
margin_bottom = 4.0
shortcut_in_tooltip = false
flat = true

[node name="Label" type="Label" parent="GameOver/Popup/GameOverButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -788.0
theme = ExtResource( 15 )
text = "GAME OVER"
align = 1
valign = 1

[node name="Label2" type="Label" parent="GameOver/Popup/GameOverButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 500.0
margin_right = 1080.0
margin_bottom = 1900.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 15 )
text = "Click to continue
"
align = 1
valign = 1

[node name="FinalScore" parent="GameOver/Popup/GameOverButton" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = -648.0
margin_bottom = -1500.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 15 )
text = "Final Score: 0"
align = 1
valign = 1
script = ExtResource( 17 )

[node name="FinalCoins" parent="GameOver/Popup/GameOverButton" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = -648.0
margin_bottom = -1440.0
grow_horizontal = 0
rect_scale = Vector2( 2.5, 2.5 )
theme = ExtResource( 15 )
text = "Coins got: 0"
align = 1
valign = 1
script = ExtResource( 18 )

[node name="PauseMenu" type="CanvasLayer" parent="."]

[node name="Popup" type="Popup" parent="PauseMenu"]
pause_mode = 2
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 9 )

[node name="Background" type="ColorRect" parent="PauseMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 140.0
margin_top = 675.0
margin_right = -140.0
margin_bottom = -725.0
color = Color( 0.470588, 0.470588, 0.470588, 0.607843 )

[node name="Label" type="Label" parent="PauseMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 425.0
margin_top = 720.0
margin_right = -425.0
margin_bottom = -1650.0
theme = ExtResource( 15 )
text = "Sound"

[node name="Volume" type="HSlider" parent="PauseMenu/Popup"]
margin_left = 165.0
margin_top = 750.0
margin_right = 465.0
margin_bottom = 790.0
rect_scale = Vector2( 2.5, 2.5 )
min_value = -80.0
max_value = 0.0
value = -20.0
scrollable = false

[node name="Resume" type="Button" parent="PauseMenu/Popup"]
margin_left = 165.0
margin_top = 1050.0
margin_right = 915.0
margin_bottom = 1300.0

[node name="Label" type="Label" parent="PauseMenu/Popup/Resume"]
anchor_right = 1.0
anchor_bottom = 1.008
margin_right = 2.0
theme = ExtResource( 15 )
text = "RESUME"
align = 1
valign = 1

[node name="Exit" type="Button" parent="PauseMenu/Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 165.0
margin_top = 1350.0
margin_right = -165.0
margin_bottom = -800.0

[node name="Label" type="Label" parent="PauseMenu/Popup/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.0
margin_bottom = 2.0
theme = ExtResource( 15 )
text = "EXIT"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -20.0
autoplay = true

[node name="AudioPlayer" type="Node" parent="."]
script = ExtResource( 11 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
light_mask = 4
margin_right = 1080.0
margin_bottom = 2400.0
texture = ExtResource( 12 )
expand = true
stretch_mode = 7

[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="pressed" from="GUI/PauseButton" to="PauseMenu/Popup" method="_on_PauseButton_pressed"]
[connection signal="value_changed" from="GUI/XP Bar" to="GUI/XP Bar" method="_on_XP_Bar_value_changed"]
[connection signal="pressed" from="LevelUpMenu/Popup/Upgrade" to="GUI/XP Bar" method="_on_Upgrade_pressed"]
[connection signal="pressed" from="LevelUpMenu/Popup/Upgrade2" to="GUI/XP Bar" method="_on_Upgrade2_pressed"]
[connection signal="pressed" from="LevelUpMenu/Popup/Upgrade3" to="GUI/XP Bar" method="_on_Upgrade3_pressed"]
[connection signal="pressed" from="GameOver/Popup/GameOverButton" to="GameOver/Popup" method="_on_GameOverButton_pressed"]
[connection signal="value_changed" from="PauseMenu/Popup/Volume" to="AudioPlayer" method="_on_Volume_value_changed"]
[connection signal="pressed" from="PauseMenu/Popup/Resume" to="PauseMenu/Popup" method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseMenu/Popup/Exit" to="PauseMenu/Popup" method="_on_Exit_pressed"]
